completed pagination! Now every request in the leaderboard is done as a search request. (Search could be empty.)  This could cause problems.

--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -52,6 +52,6 @@
         </Label>
       </children>
     </VBox>
-      <Pagination maxPageIndicatorCount="3" minHeight="-Infinity" minWidth="-Infinity" pageCount="11" />
+      <Pagination fx:id="paginationControl" maxPageIndicatorCount="10" minHeight="-Infinity" minWidth="-Infinity" />
   </children>
 </VBox>
