--- a/src/main/resources/theme/chat/chat_user_context_menu.fxml
+++ b/src/main/resources/theme/chat/chat_user_context_menu.fxml
@@ -38,6 +38,8 @@
                 text="%chat.userContext.addFoe"/>
       <MenuItem fx:id="removeFoeItem" mnemonicParsing="false" onAction="#onRemoveFoeSelected"
                 text="%chat.userContext.removeFoe"/>
+      <MenuItem fx:id="reportItem" mnemonicParsing="false" onAction="#onReport"
+                text="%chat.userContext.report"/>
     <SeparatorMenuItem mnemonicParsing="false" />
       <MenuItem fx:id="joinGameItem" mnemonicParsing="false" onAction="#onJoinGameSelected"
                 text="%chat.userContext.joinGame"/>
