Create game title text field changes background to red if not filled out

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -959,6 +959,7 @@
 
 .game-title-input {
   -fx-font-size: 0.8cm;
+  -fx-prompt-text-fill: -fx-light-text-color;
 }
 .game-generate-map {
   -fx-background-color: -dimmed-accent;
