--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -36,21 +36,45 @@
                      <content>
                         <VBox styleClass="view-content">
                            <children>
-                              <GridPane styleClass="setting-container">
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                                 <children>
-                                            <Label contentDisplay="RIGHT" maxWidth="1.7976931348623157E308" styleClass="setting-title" text="%settings.general.startTab" />
-                                    <Label styleClass="setting-description" text="%settings.general.startTab.description" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                                            <ComboBox fx:id="startTabChoiceBox" GridPane.columnIndex="1" />
-                                 </children>
-                              </GridPane>
+                               <GridPane styleClass="setting-container">
+                                   <columnConstraints>
+                                       <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                   </columnConstraints>
+                                   <rowConstraints>
+                                       <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES"/>
+                                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   </rowConstraints>
+                                   <children>
+                                       <Label contentDisplay="RIGHT" maxWidth="1.7976931348623157E308"
+                                              styleClass="setting-title" text="%settings.general.autoUpdate"/>
+                                       <Label styleClass="setting-description"
+                                              text="%settings.general.autoUpdate.description"
+                                              GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS"
+                                              GridPane.rowIndex="1"/>
+                                       <CheckBox fx:id="autoUpdateCheckbox" contentDisplay="RIGHT"
+                                                 mnemonicParsing="false" GridPane.columnIndex="1"/>
+                                   </children>
+                               </GridPane>
+                               <GridPane styleClass="setting-container">
+                                   <columnConstraints>
+                                       <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                   </columnConstraints>
+                                   <rowConstraints>
+                                       <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES"/>
+                                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                   </rowConstraints>
+                                   <children>
+                                       <Label contentDisplay="RIGHT" maxWidth="1.7976931348623157E308"
+                                              styleClass="setting-title" text="%settings.general.startTab"/>
+                                       <Label styleClass="setting-description"
+                                              text="%settings.general.startTab.description"
+                                              GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS"
+                                              GridPane.rowIndex="1"/>
+                                       <ComboBox fx:id="startTabChoiceBox" GridPane.columnIndex="1"/>
+                                   </children>
+                               </GridPane>
                               <GridPane styleClass="setting-container">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
