--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.Region?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
@@ -70,13 +70,13 @@
 
         <!-- Map List -->
         <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-        <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2"
-                      GridPane.rowIndex="4"/>
+        <TextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2"
+                   GridPane.rowIndex="4"/>
         <VBox spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
             <children>
                 <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
-                <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                           onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"/>
+                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"/>
             </children>
         </VBox>
 
