--- a/src/main/resources/theme/vault/search/search.fxml
+++ b/src/main/resources/theme/vault/search/search.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
@@ -17,11 +18,10 @@
         </HBox>
     </VBox>
     <HBox alignment="CENTER_LEFT" spacing="10.0">
-        <Button fx:id="addCriteriaButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
-                   onAction="#onAddCriteriaButtonClicked" text="%query.addCriteria"/>
-        <Button fx:id="resetButton" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308"
-                   mnemonicParsing="false"
-                   onAction="#onResetButtonClicked" text="%reset"/>
+        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                onAction="#onAddCriteriaButtonClicked" text="%query.addCriteria"/>
+        <Button layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
+                onAction="#onResetButtonClicked" text="%reset"/>
         <HBox fx:id="sortBox" alignment="CENTER_LEFT" spacing="5">
             <padding>
                 <Insets>
@@ -40,9 +40,8 @@
         <CheckBox fx:id="onlyShowLastYearCheckBox" mnemonicParsing="false"
                   text="%vault.replays.onlyShowLastYear"/>
         <Button fx:id="searchButton" defaultButton="true" mnemonicParsing="false"
-                onAction="#onSearchButtonClicked" styleClass="button-raised" text="%search">
+                onAction="#onSearchButtonClicked" text="%search">
             <graphic>
-                <Label styleClass="icon" text=""/>
             </graphic>
         </Button>
         <CheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false" text="%vault.replays.displayQuery"/>
