--- a/src/main/resources/theme/vault/vault_entity.fxml
+++ b/src/main/resources/theme/vault/vault_entity.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
@@ -12,6 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <BorderPane fx:id="root" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -25,25 +25,25 @@
                     </padding>
                     <HBox fx:id="searchBox" VBox.vgrow="NEVER">
                         <fx:include fx:id="search" source="search/search.fxml"
-                                    HBox.hgrow="ALWAYS"/>
-                        <Button fx:id="manageModsButton" styleClass="button-raised" text="%modVault.manageMods"
-                                   visible="false"/>
+                                    HBox.hgrow="ALWAYS" maxWidth="1.7976931348623157E308"/>
+                        <Button fx:id="manageModsButton" text="%modVault.manageMods"
+                                visible="false"/>
                     </HBox>
                     <Separator maxWidth="1.7976931348623157E308"/>
                     <HBox spacing="10.0">
                         <Button fx:id="backButton" mnemonicParsing="false" text="%back">
                             <graphic>
-                                <Label styleClass="icon" text=""/>
+                                <Region styleClass="icon,back-icon"/>
                             </graphic>
                         </Button>
                         <Button fx:id="refreshButton" mnemonicParsing="false" text="%refresh">
                             <graphic>
-                                <Label styleClass="icon" text=""/>
+                                <Region styleClass="icon,refresh-icon"/>
                             </graphic>
                         </Button>
                         <Button fx:id="uploadButton" mnemonicParsing="false" text="%vault.upload">
                             <graphic>
-                                <Label styleClass="icon" text=""/>
+                                <Region styleClass="icon,upload-icon"/>
                             </graphic>
                         </Button>
                     </HBox>
@@ -81,7 +81,7 @@
                 </HBox.margin>
                 <Button fx:id="firstPageButton">
                     <graphic>
-                        <Label prefHeight="30.0" styleClass="icon" text=""/>
+                        <Region styleClass="icon,fast-rewind-icon"/>
                     </graphic>
                 </Button>
             </VBox>
@@ -94,7 +94,7 @@
                 </HBox.margin>
                 <Button fx:id="lastPageButton">
                     <graphic>
-                        <Label prefHeight="30.0" styleClass="icon" text=""/>
+                        <Region styleClass="icon,fast-forward-icon"/>
                     </graphic>
                 </Button>
             </VBox>
