--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -9,24 +9,30 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root"
+          vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1"
+          fx:controller="com.faforever.client.game.CreateGameController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0" />
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0"/>
     </columnConstraints>
     <rowConstraints>
+        <RowConstraints vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" vgrow="NEVER"/>
         <RowConstraints vgrow="NEVER" />
-        <RowConstraints minHeight="10.0" vgrow="NEVER" />
+        <RowConstraints valignment="TOP" vgrow="SOMETIMES"/>
         <RowConstraints vgrow="NEVER" />
-        <RowConstraints fillHeight="false" valignment="BOTTOM" vgrow="NEVER" />
-        <RowConstraints vgrow="NEVER" />
-        <RowConstraints minHeight="10.0" />
         <RowConstraints vgrow="ALWAYS" />
-        <RowConstraints vgrow="NEVER" />
         <RowConstraints vgrow="NEVER" />
     </rowConstraints>
     <children>
@@ -50,106 +56,96 @@
         </HBox>
         <Separator maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
             <padding>
-                <Insets left="2.0" right="2.0" top="2.0" />
+                <Insets left="2.0" right="2.0" top="2.0"/>
             </padding>
         </Separator>
-        
+
         <!-- Game Type -->
-        <Label styleClass="h2" text="%game.create.gameType" GridPane.rowIndex="3" />
-        <ListView fx:id="featuredModListView" prefHeight="100.0" GridPane.rowIndex="4" GridPane.rowSpan="4" />
-        
+        <Label styleClass="h2" text="%game.create.gameType" GridPane.rowIndex="3"/>
+        <ListView fx:id="featuredModListView" prefHeight="100.0" GridPane.rowIndex="4" GridPane.rowSpan="2"/>
+
         <!-- Mods -->
-        <Label styleClass="h2" text="%game.create.mods" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <ListView fx:id="modListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS" />
-        <HBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
-            <children>
-                <JFXButton mnemonicParsing="false" onAction="#onDeselectModsButtonClicked" text="%game.create.deselectAll" />
-                <JFXButton mnemonicParsing="false" onAction="#onReloadModsButtonClicked" text="%game.create.reload" />
-            </children>
-        </HBox>
-        
+        <Label styleClass="h2" text="%game.create.mods" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+        <!-- Should be stretching about 4 rows but for magic reasons that fucks with the  layout -->
+        <fx:include fx:id="modManager" source="../mod_manager.fxml" GridPane.columnIndex="1" GridPane.rowIndex="4"
+                    GridPane.rowSpan="2"/>
+
         <!-- Map List -->
-        <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-         <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-        <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
-        <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"
-            		GridPane.halignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-        
-        <!-- Map Preview, Random Map -->
-        <Pane fx:id="mapPreviewPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="map-preview"
-        		GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="3" GridPane.valignment="CENTER" />
-        <VBox alignment="BOTTOM_LEFT" styleClass="card-dimmer"
-        		GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="3">
+        <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+        <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2"
+                      GridPane.rowIndex="4"/>
+        <VBox spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
             <children>
-                <Label fx:id="mapNameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="card-title" text="&lt;Very long map title to see if wrapping works&gt;" wrapText="true" />
+                <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
+                <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                           onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"/>
             </children>
         </VBox>
-        <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-        		GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="NEVER" />
-                <RowConstraints minHeight="10.0" vgrow="NEVER" />
-                <RowConstraints minHeight="3.0" vgrow="NEVER" />
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="160.0" vgrow="ALWAYS" />
-            </rowConstraints>
-            <children>
-                <Label fx:id="mapSizeLabel" text="&lt;Size&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <graphic>
-                        <Label styleClass="icon" text="" />
-                    </graphic>
-                </Label>
-                <Label fx:id="mapPlayersLabel" text="&lt;MaxPlayers&gt;" GridPane.rowIndex="1">
-                    <graphic>
-                        <Label styleClass="icon" text="" />
-                    </graphic>
-                </Label>
-                <Label fx:id="versionLabel" text="&lt;Version&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
-                <ScrollPane fitToWidth="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
-                    <content>
-                        <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true"/>
-                    </content>
-                </ScrollPane>
-            </children>
-        </GridPane>
 
-        <!-- text="%game.create.generatedMap" -->
-        <JFXButton fx:id="generateMapButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onGenerateMapButtonClicked"
-                   styleClass="game-generate-map" text="%game.generate" contentDisplay="RIGHT"
-                   GridPane.columnIndex="3" GridPane.rowIndex="7" GridPane.columnSpan="2">
-            <graphic>
-                <Label styleClass="button-mini-label" text="%game.generate.generatedMapNew">
-                    <Insets left="250"/>
+        <!-- Map Preview, Random Map -->
+        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3"
+              GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS">
+            <StackPane>
+                <Pane fx:id="mapPreviewPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                      styleClass="map-preview"/>
+                <VBox alignment="BOTTOM_LEFT" styleClass="card-dimmer">
+                    <children>
+                        <Label fx:id="mapNameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0"
+                               styleClass="card-title" text="&lt;Very long map title to see if wrapping works&gt;"
+                               wrapText="true"/>
+                    </children>
+                </VBox>
+            </StackPane>
+            <HBox alignment="CENTER" spacing="10.0">
+                <Label fx:id="mapSizeLabel" text="&lt;Size&gt;">
+                    <graphic>
+                        <Label styleClass="icon" text=""/>
+                    </graphic>
                 </Label>
-            </graphic>
-        </JFXButton>
+                <Label fx:id="mapPlayersLabel" text="&lt;MaxPlayers&gt;">
+                    <graphic>
+                        <Label styleClass="icon" text=""/>
+                    </graphic>
+                </Label>
+                <Label fx:id="versionLabel" text="&lt;Version&gt;"/>
+            </HBox>
+            <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS"/>
+            <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
+                       maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true"/>
+            </ScrollPane>
+
+            <!-- text="%game.create.generatedMap" -->
+            <JFXButton fx:id="generateMapButton" contentDisplay="RIGHT" maxWidth="1.7976931348623157E308"
+                       mnemonicParsing="false" onAction="#onGenerateMapButtonClicked" styleClass="game-generate-map"
+                       text="%game.generate">
+                <graphic>
+                    <Label styleClass="button-mini-label" text="%game.generate.generatedMapNew">
+                        <Insets left="250"/>
+                    </Label>
+                </graphic>
+            </JFXButton>
+        </VBox>
 
         <!-- Cancel, Ok -->
-        <JFXButton mnemonicParsing="false" onAction="#onCloseButtonClicked" text="%cancel"
-                   styleClass="more-button-padding"
-                   GridPane.halignment="LEFT" GridPane.columnIndex="0" GridPane.rowIndex="8">
+        <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onCloseButtonClicked"
+                   styleClass="more-button-padding" text="%cancel" GridPane.columnIndex="0" GridPane.halignment="LEFT"
+                   GridPane.rowIndex="6">
+            <GridPane.margin>
+                <Insets/>
+            </GridPane.margin>
+        </JFXButton>
+        <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false"
+                   onAction="#onCreateButtonClicked" styleClass="more-button-padding" text="%game.create.create"
+                   GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
             <GridPane.margin>
                 <Insets top="15"/>
             </GridPane.margin>
             <padding>
-                <Insets left="100.0" right="100.0"/>
+                <Insets left="30.0" right="30.0"/>
             </padding>
         </JFXButton>
-        <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create"
-        		 styleClass="more-button-padding"
-        		 GridPane.halignment="RIGHT" GridPane.columnIndex="3" GridPane.rowIndex="8" GridPane.columnSpan="2">
-        	<GridPane.margin><Insets top="15"/></GridPane.margin>
-        	<padding>
-				<Insets left="30.0" right="30.0" />
-			</padding>
-        </JFXButton>
-        			
+
     </children>
     <padding>
         <Insets left="20.0" right="20.0" />
